Fix nihongo on firefox

--- a/components/pages/Home/Banner.module.scss
+++ b/components/pages/Home/Banner.module.scss
@@ -22,7 +22,6 @@
 }
 
 .nihongo {
-  margin-left: $spacing-sm;
   font-size: $fs-lg;
   font-weight: bold;
   line-height: 2;
